# rust-todo-app

./: .env  Cargo.toml  Rocket.toml  diesel.toml
migrations/2024-07-09-170640_create_todos/: up.sql
src/: main.rs  schema.rs
test/: integration_tests.rs
