[package]
name = "todo_list_api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_mysql_pool"] }
diesel = { version = "2.0.0", features = ["mysql"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
dotenv = "0.15.0"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

[dependencies.rocket_contrib]
version = "0.4.10"
features = ["databases", "diesel_mysql_pool"]
